Fix width on ios

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,13 +34,17 @@ html, body {
 	height: 600vh;
 	width: 100vw;
 	cursor: url(/images/cursor.png), auto;
-	margin: 0;
-	padding: 0;
+	/* margin: 0; */
+	/* padding: 0; */
+}
+
+html {
+	box-sizing: border-box;
+	overflow-x: hidden;
 }
 
 body {
 	line-height: 1;
-	overflow-x: hidden;
 	position: relative;
 	/* overflow-y: hidden; */
 }
@@ -1835,11 +1839,39 @@ body.is-preload #header .content .inner {
 	position: relative;
 	width: 80%;
 	max-width: 100%;
-	max-height: 95vh;
+	max-height: 98vh;
 	background-color: rgba(1, 2, 8, 0.7);
 	border-radius: 5px;
 	opacity: 1;
 	font-size: 1.1rem;
+}
+
+#projects #container1 {
+	height: 510px;
+}
+
+#projects #container2 {
+	height: 363px;
+}
+
+#projects #container4 {
+	height: 595px;
+}
+
+@media screen and (max-width: 480px) {
+
+	#projects #container1 {
+		min-height: 550px;
+	}
+
+	#projects #container2 {
+		min-height: 250px;
+	}
+
+	#projects #container4 {
+		min-height: 600px;
+	}
+
 }
 
 #projects .snap-section {
@@ -1895,13 +1927,26 @@ body.is-preload #header .content .inner {
 	float: right;
 	width: 29rem;
 	margin-left: 2%;
-	/* margin-top: 10px; */
+	margin-top: -50px;
 }
 
 @media screen and (max-width: 1292px) {
 
 	#projects .container {
 		width: 85%;
+		height: auto;
+	}
+
+	#projects #container1 {
+		height: auto;
+	}
+
+	#projects #container2 {
+		height: auto;
+	}
+
+	#projects #container4 {
+		height: auto;
 	}
 
 	#first-project img {
@@ -1914,7 +1959,7 @@ body.is-preload #header .content .inner {
 
 	#bee-project img {
 		width: 25rem;
-		margin-left: 2%;
+		margin-top: 0;
 	}
 
 }
